--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^3.0.0",
     "bcryptjs": "^3.0.2",
     "chalk-ts": "^1.0.0",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.12",
     "i18next": "^25.6.0",
