--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-sitemap": "^4.2.3",
     "prisma": "^6.18.0",
     "react": "^19.1.1",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^16.1.5",
