--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "postbuild": "next-sitemap",
     "deploy:check": "./deploy-check.sh",
     "deploy:cf": "wrangler pages deploy .next --project-name=shofy-commerce --compatibility-date=2024-08-20",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
@@ -44,6 +47,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
