--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^6.18.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.8.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@types/bcryptjs": "^3.0.0",
     "bcryptjs": "^3.0.2",
     "chalk-ts": "^1.0.0",
