feat: Remove weight and dimensions fields from product form, API, and display
- Remove weight/dimensions input fields from admin product form (ProductFormClient.tsx)
- Remove explicit weight/dimensions null assignment from POST/PUT handlers
- Revert DELETE handler to standard deletion logic
- Remove weight/dimensions display from admin detail panel (ProductDetailClient.tsx)
- Remove dimensions section from consumer product specifications (ProductSpecifications.tsx)

These fields are no longer part of the product management flow. API responses will still contain them if they exist in the database, preventing any 404 errors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "terminal.integrated.defaultProfile.windows": "Command Prompt",
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
   "terminal.integrated.profiles.windows": {
     "Command Prompt": {
       "path": "C:\\Windows\\System32\\cmd.exe",
@@ -52,12 +52,8 @@
       "args": [
         "-y",
         "@playwright/mcp@latest",
-        "--isolated",
-        "--headless",
         "--browser",
-        "firefox",
-        "--user-agent",
-        "\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.6422.112 Safari/537.3\""
+        "chromium"
       ]
     }
   }
