Cloudflare Pages 배포 준비 완료

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ service-account.json
 /playwright-report/
 server.log
 test-results.txt
+
+# Cloudflare Pages / OpenNext
+/.open-next/
+/.wrangler/
+.dev.vars
