--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,13 +6,8 @@ compatibility_date = "2024-12-01"
 # Node.js 호환성 플래그 (Prisma 등 Node.js API 사용)
 compatibility_flags = ["nodejs_compat_v2"]
 
-# 메인 엔트리 포인트
-main = ".open-next/worker.js"
-
-# Assets 설정 (정적 파일)
-[assets]
-directory = ".open-next/assets"
-binding = "ASSETS"
+# Cloudflare Pages 빌드 출력 디렉토리 (필수!)
+pages_build_output_dir = ".open-next"
 
 # 환경변수 (민감하지 않은 것만, 민감한 것은 Cloudflare Dashboard에서 설정)
 [vars]
