--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cf:preview": "npm run cf:build && wrangler pages dev .open-next/assets --compatibility-flags=nodejs_compat_v2"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.1",
     "@auth/prisma-adapter": "^2.11.0",
     "@headlessui/react": "^2.2.7",
     "@neondatabase/serverless": "^1.0.2",
@@ -28,17 +29,20 @@
     "@prisma/client": "^6.18.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.8.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/bcryptjs": "^3.0.0",
     "bcryptjs": "^3.0.2",
     "chalk-ts": "^1.0.0",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.0",
     "framer-motion": "^12.23.12",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "next": "^15.4.8",
     "next-auth": "5.0.0-beta.29",
     "next-sitemap": "^4.2.3",
+    "postcss": "^8.5.6",
     "prisma": "^6.18.0",
     "react": "^19.1.1",
     "react-daum-postcode": "^3.2.0",
@@ -51,10 +55,8 @@
     "redux-persist": "^6.0.0",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
-    "ws": "^8.18.3",
-    "@tailwindcss/postcss": "^4.1.11",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
