--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,14 +2,17 @@
 
 name = "getkkul-shopping"
 compatibility_date = "2024-12-01"
+compatibility_flags = ["nodejs_compat"]
 
-# Node.js 호환성 플래그 (Prisma 등 Node.js API 사용)
-compatibility_flags = ["nodejs_compat_v2"]
+# Worker 엔트리 포인트
+main = ".open-next/worker.js"
 
-# Cloudflare Pages 빌드 출력 디렉토리 (필수!)
-pages_build_output_dir = ".open-next"
+# Assets 설정 (정적 파일)
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
 
-# 환경변수 (민감하지 않은 것만, 민감한 것은 Cloudflare Dashboard에서 설정)
+# 환경변수
 [vars]
 NODE_ENV = "production"
 
