--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,22 +1,13 @@
 #:schema node_modules/wrangler/config-schema.json
 
-name = "getkkul-shopping"
+name = "getkkul-shopping-main"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Worker 엔트리 포인트
-main = ".open-next/worker.js"
-
-# Assets 설정 (정적 파일)
-[assets]
-directory = ".open-next/assets"
-binding = "ASSETS"
+# Pages 배포 설정
+pages_build_output_dir = ".vercel/output/static"
 
 # 환경변수
 [vars]
 NODE_ENV = "production"
-
-# 개발 환경 설정
-[dev]
-port = 8788
 
