--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "esbuild": "^0.27.1",
     "eslint": "^9.33.0",
     "eslint-config-next": "15.4.6",
     "typescript": "^5.9.2",
