--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "esbuild": "^0.27.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "esbuild": "^0.27.1",
     "eslint": "^9.33.0",
     "eslint-config-next": "15.4.6",
     "typescript": "^5.9.2",
