--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,14 @@
 #:schema node_modules/wrangler/config-schema.json
 
 name = "getkkul-shopping-main"
+main = ".open-next/worker.js"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Pages 배포 설정 (OpenNext 사용)
-pages_build_output_dir = ".open-next/assets"
+# OpenNext 자산 설정
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
 
 # 환경변수
 [vars]
