--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
-    "@auth/prisma-adapter": "^2.11.0",
     "@headlessui/react": "^2.2.7",
     "@neondatabase/serverless": "^1.0.2",
     "@opennextjs/cloudflare": "^1.14.4",
-    "@prisma/adapter-neon": "^7.1.0",
-    "@prisma/client": "^6.18.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.8.0",
     "@tailwindcss/postcss": "^4.1.11",
@@ -35,6 +32,7 @@
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
+    "esbuild": "^0.27.1",
     "framer-motion": "^12.23.12",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -42,7 +40,6 @@
     "next-auth": "5.0.0-beta.29",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.6",
-    "prisma": "^6.18.0",
     "react": "^19.1.1",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.1",
@@ -55,8 +52,7 @@
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "ws": "^8.18.3",
-    "esbuild": "^0.27.1"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
