--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-confetti": "^6.4.0",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
