--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^12.23.12",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jose": "^6.1.3",
     "next": "^15.4.8",
     "next-auth": "5.0.0-beta.29",
     "next-sitemap": "^4.2.3",
