--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,4 +10,11 @@ pages_build_output_dir = ".vercel/output/static"
 # 환경변수
 [vars]
 NODE_ENV = "production"
+NEXTAUTH_URL = "https://www.getkkul.com"
+NEXT_PUBLIC_TOSS_CLIENT_KEY = "live_gck_ex6BJGQOVDW0aeEX0X5X3W4w2zNb"
+NEXT_PUBLIC_TOSS_VARIANT_KEY = "getkkul-live-toss"
+NEXT_PUBLIC_TOSS_SUCCESS_URL = "https://www.getkkul.com/payment/success"
+NEXT_PUBLIC_TOSS_FAIL_URL = "https://www.getkkul.com/payment/fail"
+NEXT_PUBLIC_FREE_SHIPPING_THRESHOLD = "29000"
+NEXT_PUBLIC_TOSS_API_URL = "https://api.tosspayments.com"
 
