--- a/.env.example
+++ b/.env.example
@@ -51,11 +51,24 @@ TOSS_CLIENT_KEY=test_ck_docs_KRmKpmxgMMM9R2BG0Z8rzA0p
 NODE_ENV=production
 
 # ==========================================
+# Cloudflare R2 스토리지 (이미지 업로드)
+# ==========================================
+# R2 버킷은 wrangler.toml에서 바인딩됨
+# 공개 URL은 R2 버킷의 커스텀 도메인 또는 퍼블릭 액세스 URL
+R2_PUBLIC_URL=https://images.getkkul.com
+
+# ==========================================
 # Cloudflare Pages 배포 시 설정 방법
 # ==========================================
 # 1. Cloudflare Dashboard > Pages > 프로젝트 선택
 # 2. Settings > Environment variables
 # 3. 위 변수들을 추가 (Production 환경)
 # 4. 민감한 정보는 "Encrypt" 옵션 활성화
+#
+# R2 버킷 설정:
+# 1. Cloudflare Dashboard > R2 > Create bucket
+# 2. 버킷 이름: getkkul-images
+# 3. Settings > Public access 활성화 또는 커스텀 도메인 연결
+# 4. wrangler.toml에 바인딩 설정 확인
 # ==========================================
 
