--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,11 @@ compatibility_flags = ["nodejs_compat"]
 # Pages 배포 설정
 pages_build_output_dir = ".vercel/output/static"
 
+# R2 버킷 바인딩 (이미지 업로드용)
+[[r2_buckets]]
+binding = "R2_BUCKET"
+bucket_name = "getkkul-images"
+
 # 환경변수
 [vars]
 NODE_ENV = "production"
@@ -16,4 +21,5 @@ NEXT_PUBLIC_TOSS_SUCCESS_URL = "https://www.getkkul.com/payment/success"
 NEXT_PUBLIC_TOSS_FAIL_URL = "https://www.getkkul.com/payment/fail"
 NEXT_PUBLIC_FREE_SHIPPING_THRESHOLD = "29000"
 NEXT_PUBLIC_TOSS_API_URL = "https://api.tosspayments.com"
+R2_PUBLIC_URL = "https://images.getkkul.com"
 
